--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="container">
             <div class="column">
                 <h3>Mandag 11. dec</h3>
-                <div class="no_video"></div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/j1gfWEIi_Y0" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
             </div>
             <div class="column">
                 <h3>Tirsdag 12. dec</h3>
@@ -56,7 +56,7 @@
     </section>
 
     <section id="persona" class="bg_red">
-        <h3>Persona</h3>
+        <h2>Persona</h2>
         <div>
             <h4>Bjarne</h4>
             <img src="img/bjarne.jpg" alt="Bjarnes persona">
