--- a/index.html
+++ b/index.html
@@ -163,6 +163,99 @@
         </p>
     </section>
 
+    <section id="udvaelgelse" class="bg_red">
+
+
+        <h2>Benchmarking</h2>
+
+        <img src="img/benchmarking.png" alt="Benchmarking">
+
+        <h2>Udv&aelig;lgelse af id&eacute;</h2>
+
+        <p>Vi har valgt <i>"2. Community Manager App til at løse generelle ting"</i>, eftersom det er den app som bedst opfylder de forskellige behov ud fra Republikkens brugerundersøgelse. Udover det har den også fået den højeste score i benchmarkingen.</p>
+        <p>Hvis man kigger på appen <i>"1. Community Manager som assistent / AI"</i> er den vores andet valg i forhold til benchmarkingen, dog har den fået meget lav score i kategorien "realiserbar", grundet at vi har fået sat et fast budget, som ikke kan overholdes ved denne app.</p>
+        <p></p>
+
+    </section>
+
+    <section id="data" class="bg_blue">
+
+        <h2>Test af paper-prototype</h2>
+
+
+
+        <h2>Data-mining</h2>
+
+        <div class="container">
+            <div class="column">
+                <p>Marcus, 00:37</p>
+                <p>"... se sit abonnement"</p>
+            </div>
+            <div class="column">
+                <p>Victor, 00:45</p>
+                <p>"Frokost kort, noget med nogle tilbud"</p>
+            </div>
+        </div>
+        <div class="container">
+            <div class="column">
+                <p>Marcus, 01:30</p>
+                <p>"Se sine egne betalingsoplysninger"</p>
+            </div>
+            <div class="column">
+                <p>Marcus, 02:12</p>
+                <p>"De røde tal er når der er booket"</p>
+            </div>
+        </div>
+        <div class="container">
+            <div class="column">
+                <p>Marcus, 03:23</p>
+                <p>"Faciliteter, smart"</p>
+            </div>
+            <div class="column">
+                <p>Victor, 03:20</p>
+                <p>"Hvornår der er ledigt"</p>
+            </div>
+        </div>
+        <div class="container">
+            <div class="column">
+                <p>Victor, 03:58</p>
+                <p>"Indløs fordele, fedt"</p>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="column">
+
+                <h2>Data kodning</h2>
+
+                <h3>Korrekt forklaring af app:</h3>
+
+                <p>"Se sit abbonement", Marcus</p>
+                <p>"Se sine egne betalingsoplysninger", Marcus</p>
+                <p>"Hvornår det er ledigt", Marcus</p>
+                <p>"De røde tal er når der er booket", Marcus</p>
+
+                <h3>Ukorrekt forklaring af app:</h3>
+
+                <p>"Frokost kort, noget med nogle tilbud", Victor</p>
+
+                <h3>Feedback:</h3>
+
+                <p>"Faciliteter, smart", Marcus</p>
+                <p>"Indløs fordele, fedt", Victor</p>
+            </div>
+            <div class="column">
+
+                <h2>Mønstre og indsigter</h2>
+
+                <h3>1.</h3>
+                <p>Overordnet set er der god forståelse for appens features, dog er der et problem med featuren "frokost kort", hvor testpersonen tror at det er tilbud.</p>
+                <h3>2.</h3>
+                <p>Featurene "fordele" og "kalender" var der god forståelse for, og de fik god feedback.</p>
+            </div>
+        </div>
+    </section>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="java.js"></script>
 </body>
