--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <body>
 
-    <section id="splash">
+    <section id="splash" class="bg_pri">
         <h1>Dokumentationssite</h1>
     </section>
 
-    <section id="scrum" class="bg_blue">
+    <section id="scrum" class="bg_sec">
         <h2>Scrum meetings</h2>
 
         <div class="container">
@@ -55,29 +55,29 @@
         </div>
     </section>
 
-    <section id="persona" class="bg_red">
+    <section id="persona" class="bg_pri">
         <h2>Persona</h2>
         <div>
             <h4>Bjarne</h4>
             <img src="img/bjarne.jpg" alt="Bjarnes persona">
             <p><b>Alder:</b> 32 år
                 <br><b>Uddannelse:</b> Journalistik og coaching<br>
-                <b>Bopæl:</b> andelslejlighed, Østerbro<br>
+                <b>Bopæl:</b> andelslejlighed, &pslash;sterbro<br>
                 <b>Civilstatus:</b> forlovet<br>
-                <b>Børn:</b> Forlovede er gravid i 6. måned</p>
-            <p><b>Kort om Bjarne:</b><br> Bjarne har valgt at have kontor hos republikken. Bjarne er freelancer og tidligere da han arbejdede hjemme mærker blev mindre og mindre med tiden. Bjarne havde hørt fra en ven at man kunne have kontor i et kontorfællesskab og var derfor ude og se på nogle forskellige og endte med at vælge republikken fordi der var god beliggenhed, sociale events og fede lokaler.</p>
+                <b>B&pslash;rn:</b> Forlovede er gravid i 6. måned</p>
+            <p><b>Kort om Bjarne:</b><br> Bjarne har valgt at have kontor hos republikken. Bjarne er freelancer og tidligere da han arbejdede hjemme mærker blev mindre og mindre med tiden. Bjarne havde h&oslash;rt fra en ven at man kunne have kontor i et kontorfællesskab og var derfor ude og se på nogle forskellige og endte med at vælge republikken fordi der var god beliggenhed, sociale events og fede lokaler.</p>
             <p>Bjarne syntes det er fedt at der er gratis espresso.</p>
             <p>Bjarne har nu været der i snart 2 år og har været rigtig glad for det, men syntes at engagementet var faldet på de sociale events og overvejer derfor at skifte til et andet kontorfællesskab da Bjarne er meget socialt anlagt.</p>
         </div>
     </section>
 
-    <section id="app_ide" class="bg_blue">
+    <section id="app_ide" class="bg_sec">
         <h2>App id&eacute;er</h2>
 
         <h3>1. Community Manager som assistent / AI</h3>
 
         <p>
-            <b>Id&eacute;beskrivelse:</b><br> Skriv et spørgsmål og ai hjælper dig videre
+            <b>Id&eacute;beskrivelse:</b><br> Skriv et sp&pslash;rgsmål og ai hjælper dig videre
         </p>
         <p>
             <b>Fordele:</b>
@@ -90,7 +90,7 @@
             <br> Kan ikke udvikles indenfor budgettet på max 100.000kr
         </p>
 
-        <h3>2. Community Manager App til at løse generelle ting</h3>
+        <h3>2. Community Manager App til at l&pslash;se generelle ting</h3>
 
         <p>
             <b>Id&eacute;beskrivelse: </b>
@@ -104,16 +104,16 @@
         </p>
         <p>
             <b>Ulemper: </b>
-            <br>Kedeligt Statisk Løser ikke et socialt problem
-            <br>Tilfører ikke meget nyt til Republikken &#40;en levende CM eksisterer jo alledere&#41;
+            <br>Kedeligt Statisk L&pslash;ser ikke et socialt problem
+            <br>Tilf&pslash;rer ikke meget nyt til Republikken &#40;en levende CM eksisterer jo alledere&#41;
         </p>
 
         <h3>3. Gammeldags forum</h3>
         <p>
             <b>Id&eacute;beskrivelse: </b>
             <br>Fælles forum for Republikken med emner og kategorier
-            <br>Opret dit spørgsmål/problem, så andre kan svare og hjælpe dig
-            <br> Udforsk forummet efter tidligere løste problemer
+            <br>Opret dit sp&pslash;rgsmål/problem, så andre kan svare og hjælpe dig
+            <br> Udforsk forummet efter tidligere l&pslash;ste problemer
         </p>
         <p>
             <b>Fordele: </b>
@@ -127,10 +127,10 @@
             <br>Forum findes andre steder på nettet
         </p>
 
-        <h3>4. Job / projekt børs</h3>
+        <h3>4. Job / projekt b&pslash;rs</h3>
         <p>
             <b>Id&eacute;beskrivelse: </b>
-            <br>Projektbørsen er en app hvor Republikkens medlemmer kan poste jobs som de andre medlemmer med relevante kompetencer kan byde ind på
+            <br>Projektb&pslash;rsen er en app hvor Republikkens medlemmer kan poste jobs som de andre medlemmer med relevante kompetencer kan byde ind på
         </p>
         <p>
             <b>Fordele: </b>
@@ -149,7 +149,7 @@
             <br>Være flere om at skabe events
             <br>CM kan være tovholder på udviklingen
             <br>CM kan være led mellem events og ledelsen ift
-            <br>Økonomisk støtte
+            <br>&Oslash;konomisk st&pslash;tte
         </p>
         <p>
             <b>Fordele: </b>
@@ -163,7 +163,7 @@
         </p>
     </section>
 
-    <section id="udvaelgelse" class="bg_red">
+    <section id="udvaelgelse" class="bg_pri">
 
 
         <h2>Benchmarking</h2>
@@ -172,13 +172,13 @@
 
         <h2>Udv&aelig;lgelse af id&eacute;</h2>
 
-        <p>Vi har valgt <i>"2. Community Manager App til at løse generelle ting"</i>, eftersom det er den app som bedst opfylder de forskellige behov ud fra Republikkens brugerundersøgelse. Udover det har den også fået den højeste score i benchmarkingen.</p>
-        <p>Hvis man kigger på appen <i>"1. Community Manager som assistent / AI"</i> er den vores andet valg i forhold til benchmarkingen, dog har den fået meget lav score i kategorien "realiserbar", grundet at vi har fået sat et fast budget, som ikke kan overholdes ved denne app.</p>
+        <p>Vi har valgt <i>"2. Community Manager App til at l&pslash;se generelle ting"</i>, eftersom det er den app som bedst opfylder de forskellige behov ud fra Republikkens brugerunders&pslash;gelse. Udover det har den også fået den h&pslash;jeste score i benchmarkingen.</p>
+        <p>Hvis man kigger på appen <i>"1. Community Manager som assistent / AI"</i> er den vores andet valg i forhold til benchmarkingen, dog har den fået meget lav score i kategorien "realiserbar", grundet at vi har f&aring;et sat et fast budget, som ikke kan overholdes ved denne app.</p>
         <p></p>
 
     </section>
 
-    <section id="data" class="bg_blue">
+    <section id="data" class="bg_sec">
 
         <h2>Test af paper-prototype</h2>
 
@@ -205,7 +205,7 @@
             </div>
             <div class="column">
                 <p>Marcus, 02:12</p>
-                <p>"De røde tal er når der er booket"</p>
+                <p>"De r&oslash;de tal er n&aring;r der er booket"</p>
             </div>
         </div>
         <div class="container">
@@ -215,13 +215,13 @@
             </div>
             <div class="column">
                 <p>Victor, 03:20</p>
-                <p>"Hvornår der er ledigt"</p>
+                <p>"Hvorn&aring;r der er ledigt"</p>
             </div>
         </div>
         <div class="container">
             <div class="column">
                 <p>Victor, 03:58</p>
-                <p>"Indløs fordele, fedt"</p>
+                <p>"Indl&oslash;s fordele, fedt"</p>
             </div>
         </div>
 
@@ -234,8 +234,8 @@
 
                 <p>"Se sit abbonement", Marcus</p>
                 <p>"Se sine egne betalingsoplysninger", Marcus</p>
-                <p>"Hvornår det er ledigt", Marcus</p>
-                <p>"De røde tal er når der er booket", Marcus</p>
+                <p>"Hvorn&aring;r det er ledigt", Marcus</p>
+                <p>"De r&oslash;de tal er når der er booket", Marcus</p>
 
                 <h3>Ukorrekt forklaring af app:</h3>
 
@@ -244,16 +244,16 @@
                 <h3>Feedback:</h3>
 
                 <p>"Faciliteter, smart", Marcus</p>
-                <p>"Indløs fordele, fedt", Victor</p>
+                <p>"Indl&oslash;s fordele, fedt", Victor</p>
             </div>
             <div class="column">
 
-                <h2>Mønstre og indsigter</h2>
+                <h2>M&oslash;nstre og indsigter</h2>
 
                 <h3>1.</h3>
-                <p>Overordnet set er der god forståelse for appens features, dog er der et problem med featuren "frokost kort", hvor testpersonen tror at det er tilbud.</p>
+                <p>Overordnet set er der god forst&aring;else for appens features, dog er der et problem med featuren "frokost kort", hvor testpersonen tror at det er tilbud.</p>
                 <h3>2.</h3>
-                <p>Featurene "fordele" og "kalender" var der god forståelse for, og de fik god feedback.</p>
+                <p>Featurene "fordele" og "kalender" var der god forst&aring;else for, og de fik god feedback.</p>
             </div>
         </div>
     </section>
