--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     </section>
 
     <section id="scrum" class="bg_sec">
-        <h2>Scrum meetings</h2>
+        <h2>Scrum meetings &amp; Trello</h2>
+
+        <h3>Trelloboard:</h3>
+        <a href="https://trello.com/b/U7x6JHs0/ux-republikken-case" target="_blank">https://trello.com/b/U7x6JHs0/ux-republikken-case</a>
 
         <div class="container">
             <div class="column">
@@ -42,7 +45,7 @@
             </div>
             <div class="column">
                 <h3>Tirsdag 12. dec</h3>
-                <div class="no_video"></div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/LVTctnXr0R8" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
             </div>
             <div class="column">
                 <h3>Onsdag 13. dec</h3>
@@ -62,9 +65,9 @@
             <img src="img/bjarne.jpg" alt="Bjarnes persona">
             <p><b>Alder:</b> 32 år
                 <br><b>Uddannelse:</b> Journalistik og coaching<br>
-                <b>Bopæl:</b> andelslejlighed, &pslash;sterbro<br>
+                <b>Bopæl:</b> andelslejlighed, &oslash;sterbro<br>
                 <b>Civilstatus:</b> forlovet<br>
-                <b>B&pslash;rn:</b> Forlovede er gravid i 6. måned</p>
+                <b>B&oslash;rn:</b> Forlovede er gravid i 6. måned</p>
             <p><b>Kort om Bjarne:</b><br> Bjarne har valgt at have kontor hos republikken. Bjarne er freelancer og tidligere da han arbejdede hjemme mærker blev mindre og mindre med tiden. Bjarne havde h&oslash;rt fra en ven at man kunne have kontor i et kontorfællesskab og var derfor ude og se på nogle forskellige og endte med at vælge republikken fordi der var god beliggenhed, sociale events og fede lokaler.</p>
             <p>Bjarne syntes det er fedt at der er gratis espresso.</p>
             <p>Bjarne har nu været der i snart 2 år og har været rigtig glad for det, men syntes at engagementet var faldet på de sociale events og overvejer derfor at skifte til et andet kontorfællesskab da Bjarne er meget socialt anlagt.</p>
@@ -77,7 +80,7 @@
         <h3>1. Community Manager som assistent / AI</h3>
 
         <p>
-            <b>Id&eacute;beskrivelse:</b><br> Skriv et sp&pslash;rgsmål og ai hjælper dig videre
+            <b>Id&eacute;beskrivelse:</b><br> Skriv et sp&oslash;rgsmål og ai hjælper dig videre
         </p>
         <p>
             <b>Fordele:</b>
@@ -90,7 +93,7 @@
             <br> Kan ikke udvikles indenfor budgettet på max 100.000kr
         </p>
 
-        <h3>2. Community Manager App til at l&pslash;se generelle ting</h3>
+        <h3>2. Community Manager App til at l&oslash;se generelle ting</h3>
 
         <p>
             <b>Id&eacute;beskrivelse: </b>
@@ -104,16 +107,16 @@
         </p>
         <p>
             <b>Ulemper: </b>
-            <br>Kedeligt Statisk L&pslash;ser ikke et socialt problem
-            <br>Tilf&pslash;rer ikke meget nyt til Republikken &#40;en levende CM eksisterer jo alledere&#41;
+            <br>Kedeligt Statisk L&oslash;ser ikke et socialt problem
+            <br>Tilf&oslash;rer ikke meget nyt til Republikken &#40;en levende CM eksisterer jo alledere&#41;
         </p>
 
         <h3>3. Gammeldags forum</h3>
         <p>
             <b>Id&eacute;beskrivelse: </b>
             <br>Fælles forum for Republikken med emner og kategorier
-            <br>Opret dit sp&pslash;rgsmål/problem, så andre kan svare og hjælpe dig
-            <br> Udforsk forummet efter tidligere l&pslash;ste problemer
+            <br>Opret dit sp&oslash;rgsmål/problem, så andre kan svare og hjælpe dig
+            <br> Udforsk forummet efter tidligere l&oslash;ste problemer
         </p>
         <p>
             <b>Fordele: </b>
@@ -127,10 +130,10 @@
             <br>Forum findes andre steder på nettet
         </p>
 
-        <h3>4. Job / projekt b&pslash;rs</h3>
+        <h3>4. Job / projekt b&oslash;rs</h3>
         <p>
             <b>Id&eacute;beskrivelse: </b>
-            <br>Projektb&pslash;rsen er en app hvor Republikkens medlemmer kan poste jobs som de andre medlemmer med relevante kompetencer kan byde ind på
+            <br>Projektb&oslash;rsen er en app hvor Republikkens medlemmer kan poste jobs som de andre medlemmer med relevante kompetencer kan byde ind på
         </p>
         <p>
             <b>Fordele: </b>
@@ -149,7 +152,7 @@
             <br>Være flere om at skabe events
             <br>CM kan være tovholder på udviklingen
             <br>CM kan være led mellem events og ledelsen ift
-            <br>&Oslash;konomisk st&pslash;tte
+            <br>&Oslash;konomisk st&oslash;tte
         </p>
         <p>
             <b>Fordele: </b>
@@ -172,7 +175,7 @@
 
         <h2>Udv&aelig;lgelse af id&eacute;</h2>
 
-        <p>Vi har valgt <i>"2. Community Manager App til at l&pslash;se generelle ting"</i>, eftersom det er den app som bedst opfylder de forskellige behov ud fra Republikkens brugerunders&pslash;gelse. Udover det har den også fået den h&pslash;jeste score i benchmarkingen.</p>
+        <p>Vi har valgt <i>"2. Community Manager App til at l&oslash;se generelle ting"</i>, eftersom det er den app som bedst opfylder de forskellige behov ud fra Republikkens brugerunders&oslash;gelse. Udover det har den også fået den h&oslash;jeste score i benchmarkingen.</p>
         <p>Hvis man kigger på appen <i>"1. Community Manager som assistent / AI"</i> er den vores andet valg i forhold til benchmarkingen, dog har den fået meget lav score i kategorien "realiserbar", grundet at vi har f&aring;et sat et fast budget, som ikke kan overholdes ved denne app.</p>
         <p></p>
 
@@ -191,37 +194,37 @@
         <div class="container">
             <div class="column">
                 <p>Marcus, 00:37</p>
-                <p>"... se sit abonnement"</p>
+                <p><i>"... se sit abonnement"</i></p>
             </div>
             <div class="column">
                 <p>Victor, 00:45</p>
-                <p>"Frokost kort, noget med nogle tilbud"</p>
+                <p><i>"Frokost kort, noget med nogle tilbud"</i></p>
             </div>
         </div>
         <div class="container">
             <div class="column">
                 <p>Marcus, 01:30</p>
-                <p>"Se sine egne betalingsoplysninger"</p>
+                <p><i>"Se sine egne betalingsoplysninger"</i></p>
             </div>
             <div class="column">
                 <p>Marcus, 02:12</p>
-                <p>"De r&oslash;de tal er n&aring;r der er booket"</p>
+                <p><i>"De r&oslash;de tal er n&aring;r der er booket"</i></p>
             </div>
         </div>
         <div class="container">
             <div class="column">
                 <p>Marcus, 03:23</p>
-                <p>"Faciliteter, smart"</p>
+                <p><i>"Faciliteter, smart"</i></p>
             </div>
             <div class="column">
                 <p>Victor, 03:20</p>
-                <p>"Hvorn&aring;r der er ledigt"</p>
+                <p><i>"Hvorn&aring;r der er ledigt"</i></p>
             </div>
         </div>
         <div class="container">
             <div class="column">
                 <p>Victor, 03:58</p>
-                <p>"Indl&oslash;s fordele, fedt"</p>
+                <p><i>"Indl&oslash;s fordele, fedt"</i></p>
             </div>
         </div>
 
@@ -232,19 +235,19 @@
 
                 <h3>Korrekt forklaring af app:</h3>
 
-                <p>"Se sit abbonement", Marcus</p>
-                <p>"Se sine egne betalingsoplysninger", Marcus</p>
-                <p>"Hvorn&aring;r det er ledigt", Marcus</p>
-                <p>"De r&oslash;de tal er når der er booket", Marcus</p>
+                <p><i>"... se sit abbonement"</i>, Marcus</p>
+                <p><i>"Se sine egne betalingsoplysninger"</i>, Marcus</p>
+                <p><i>"Hvorn&aring;r der er ledigt"</i>, Marcus</p>
+                <p><i>"De r&oslash;de tal er når der er booket"</i>, Marcus</p>
 
                 <h3>Ukorrekt forklaring af app:</h3>
 
-                <p>"Frokost kort, noget med nogle tilbud", Victor</p>
+                <p><i>"Frokost kort, noget med nogle tilbud"</i>, Victor</p>
 
                 <h3>Feedback:</h3>
 
-                <p>"Faciliteter, smart", Marcus</p>
-                <p>"Indl&oslash;s fordele, fedt", Victor</p>
+                <p><i>"Faciliteter, smart"</i>, Marcus</p>
+                <p><i>"Indl&oslash;s fordele, fedt"</i>, Victor</p>
             </div>
             <div class="column">
 
@@ -256,6 +259,23 @@
                 <p>Featurene "fordele" og "kalender" var der god forst&aring;else for, og de fik god feedback.</p>
             </div>
         </div>
+    </section>
+    <section id="ikon" class="bg_pri">
+        <h2>App ikon</h2>
+        <h3>Skitser til ikon</h3>
+        <div>
+            <img src="img/ikon_skitser.svg" alt="ikonskitser">
+        </div>
+        <h3>Udvalgt ikon</h3>
+    </section>
+
+    <section id="navn" class="bg_sec">
+        <h2>App navn</h2>
+        <img src="img/app_navne.jpg" alt="appnavne">
+
+        <h3>Republikken home</h3>
+        <p>Vi har ikke valgt et navn der står på brainstormen, men noget i samme stil. Et meget overordnet navn der henviser til at der er flere funktioner end blot én i appen. Vi har valgt navnet 'Rebublikken Home'. Navnet vil først blive vist når man går ind på selve appen, da længden af ordet er for langt til at have stående under ikonet. Der vil derfor blot stå 'Republikken' når du ser på ikonet på din iphone. </p>
+
     </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
