--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
             <div class="column">
                 <h3>Onsdag 13. dec</h3>
-                <div class="no_video"></div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/iCd7SlpXzEk" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
             </div>
             <div class="column">
                 <h3>Torsdag 14. dec</h3>
