--- a/pitch/index.html
+++ b/pitch/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="da">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Republikken App</title>
+    <link href="https://fonts.googleapis.com/css?family=Barlow:400,500,600,700,900|Roboto:400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 
@@ -11,14 +13,27 @@
 
     <h1>Republikken Home</h1>
 
-    <ul>
-        <li>Som selvstændig er tid penge - med Republikkens app kan du spare tid.</li>
-        <li>Appen kan bruges hvor som helst, når som helst - også på farten!</li>
-        <li>Med få klik får du ordnet de typiske praktiske opgaver forbundet med din kontorplads hos Republikken. Appen er overskueligt let at komme igang med.</li>
-        <li>Booking af mødelokaler, værksted, frokost samt oversigt over events, medlemmer, fordele og meget meget mere er kun få klik væk.</li>
-    </ul>
+    <p class="underoverskrift">Dit kontor lige ved hånden!</p>
 
-    <img src="iphone.png" alt="iPhone">
+
+
+    <p class="underoverskrift2">Hvor som helst, når som helst - også på farten!</p>
+
+
+    <h2>Med appen kan du:</h2>
+    <ul>
+        <li>Bestille frokost og klippekort til frokost</li>
+        <li>Se informationer på de andre medlemmer
+        </li>
+        <li>Booke mødelokaler/værksted</li>
+        <li>Se og aktivere fordele</li>
+        <li>Se de seneste nyheder </li>
+        <li>Se kommende events og foreslå nye events</li>
+        <li>Betale direkte i appen</li>
+        <li>Indberette fejl og mangler</li>
+    </ul>
+    <img class="circle" src="circle.svg" alt="Circle">
+    <img class="phone" src="iphone.png" alt="iPhone">
 
     <div>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/iCd7SlpXzEk?autoplay=1&loop=1rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
@@ -27,4 +42,5 @@
 
     <script src=""></script>
 </body>
+
 </html>
