--- a/praesentation.html
+++ b/praesentation.html
@@ -20,12 +20,13 @@
 
         <p class="center_2 prov">Prøv appen <a href="#LINK#">her</a></p>
         <div class="buttons">
-            <a>
-                <div class="">Dokumentationssite</div>
+            <a href="index.html" target="_blank">
+                <div>Dokumentationssite</div>
             </a>
-            <a>
-                <div class="">Pitch materiale</div>
+            <a href="pitch/index.html" target="_blank">
+                <div>Pitch materiale</div>
             </a>
+
         </div>
 
     </section>
