--- a/pitch/index.html
+++ b/pitch/index.html
@@ -35,11 +35,14 @@
     <img class="circle" src="circle.svg" alt="Circle">
     <img class="phone" src="iphone.png" alt="iPhone">
 
+    <video src="../img/app_video.mp4" autoplay loop></video>
+
+    <!--
     <div>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/iCd7SlpXzEk?autoplay=1&loop=1rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
-        <!-- CODE: ?autoplay=1&loop=1 -->
+        <!-- CODE: ?autoplay=1&loop=1
     </div>
-
+-->
     <script src=""></script>
 </body>
 
