--- a/praesentation.html
+++ b/praesentation.html
@@ -13,20 +13,26 @@
         <h1 class="center_2">Republikken Home</h1>
 
         <p class="center_2">Tekst tekst bla bla bla lyder godtTekst tekst bla bla bla lyder godtTekst tekst bla bla bla lyder godtTekst tekst bla bla bla lyder godtTekst tekst bla bla bla lyder godtTekst tekst bla bla bla lyder godtTekst tekst bla bla bla lyder godtTekst tekst bla bla bla lyder godtTekst tekst bla bla bla lyder godtTekst tekst bla bla bla lyder godtTekst tekst bla bla bla lyder godtTekst tekst bla bla bla lyder godtTekst tekst bla bla bla lyder godtTekst tekst bla bla bla lyder godtTekst tekst bla bla bla lyder godtTekst tekst bla bla bla lyder godtTekst tekst bla bla bla lyder godtTekst tekst bla bla bla lyder godt</p>
+        <div class="container">
+            <div class="app_vid column">
+                <img src="pitch/iphone.png" alt="iPhone">
+                <video src="img/app_video.mp4" controls></video>
+            </div>
+            <div class="column">
+                <div class="buttons">
 
-        <div class="center_2">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/iCd7SlpXzEk" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
-        </div>
+                    <p class="center_2 prov">Prøv appen <a href="#LINK#" target="_blank">her</a></p>
 
-        <p class="center_2 prov">Prøv appen <a href="#LINK#">her</a></p>
-        <div class="buttons">
-            <a href="index.html" target="_blank">
-                <div>Dokumentationssite</div>
-            </a>
-            <a href="pitch/index.html" target="_blank">
-                <div>Pitch materiale</div>
-            </a>
+                    <a href="index.html" target="_blank">
+                        <div>Dokumentationssite</div>
+                    </a>
 
+                    <a href="pitch/index.html" target="_blank">
+                        <div>Pitch materiale</div>
+                    </a>
+
+                </div>
+            </div>
         </div>
 
     </section>
