--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 
     <section id="splash" class="bg_pri">
         <h1>Dokumentationssite</h1>
+        <p>Gruppe 19</p>
+
+        <a href="praesentation.html" target="_blank">Afleveringssite</a>
+        <a href="pitch/index.html" target="_blank">Præsentationssite</a>
     </section>
 
     <section id="scrum" class="bg_sec">
@@ -276,6 +280,44 @@
         <h3>Republikken home</h3>
         <p>Vi har ikke valgt et navn der står på brainstormen, men noget i samme stil. Et meget overordnet navn der henviser til at der er flere funktioner end blot én i appen. Vi har valgt navnet 'Rebublikken Home'. Navnet vil først blive vist når man går ind på selve appen, da længden af ordet er for langt til at have stående under ikonet. Der vil derfor blot stå 'Republikken' når du ser på ikonet på din iphone. </p>
 
+    </section>
+
+    <section id="styletile" class="bg_pri">
+
+        <h2>Styletile</h2>
+
+        <img src="img/styletile.jpg" alt="Styletile">
+
+    </section>
+
+    <section id="test_xd" class="bg_sec">
+
+        <h2>Test af XD-prototype</h2>
+
+        <div class="center">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/M2YOe92xLf4" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+        </div>
+    </section>
+
+    <section id="gruppe" class="bg_pri">
+        <h2>Gruppe 19</h2>
+        <div class="container">
+            <div class="column">
+                <p><strong>Frederik</strong><br> Harder Saugmann</p>
+            </div>
+            <div class="column">
+                <p><strong>Jonas</strong> <br>Pedersen</p>
+            </div>
+            <div class="column">
+                <p><strong>Magnus</strong><br> Stampe Nielsen</p>
+            </div>
+            <div class="column">
+                <p><strong>Sandra</strong><br> Sølvborg</p>
+            </div>
+            <div class="column">
+                <p><strong>Sofie</strong><br> Svendsen</p>
+            </div>
+        </div>
     </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
