--- a/pitch/index.html
+++ b/pitch/index.html
@@ -35,7 +35,7 @@
     <img class="circle" src="circle.svg" alt="Circle">
     <img class="phone" src="iphone.png" alt="iPhone">
 
-    <iframe width="377" height="667" src="https://xd.adobe.com/embed/b096d4b2-bfd4-46d8-b8ca-1ef5fa0b39a1?hints=off" frameborder="0" allowfullscreen></iframe>
+    <iframe width="18.3vw" height="32.4vw" src="https://xd.adobe.com/embed/b096d4b2-bfd4-46d8-b8ca-1ef5fa0b39a1?hints=off" frameborder="0" allowfullscreen></iframe>
 
     <!--
     <div>
