--- a/pitch/index.html
+++ b/pitch/index.html
@@ -5,15 +5,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Republikken App</title>
-    <link href="https://fonts.googleapis.com/css?family=Barlow:400,500,600,700,900|Roboto:400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Barlow:300,400,500,600,700,900|Roboto:400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 
 <body>
 
-    <h1>Republikken Home</h1>
+    <h1>Republikken <b>Home</b></h1>
 
-    <p class="underoverskrift">Dit kontor lige ved hånden!</p>
+    <p class="underoverskrift"><b>Dit fællesskab</b> lige ved hånden!</p>
 
 
 
