--- a/pitch/index.html
+++ b/pitch/index.html
@@ -32,10 +32,10 @@
         <li>Betale direkte i appen</li>
         <li>Indberette fejl og mangler</li>
     </ul>
-    <img class="circle" src="circle.svg" alt="Circle">
+    <img class="circle" src="red_circle.svg" alt="Circle">
     <img class="phone" src="iphone.png" alt="iPhone">
 
-    <iframe width="18.3vw" height="32.4vw" src="https://xd.adobe.com/embed/b096d4b2-bfd4-46d8-b8ca-1ef5fa0b39a1?hints=off" frameborder="0" allowfullscreen></iframe>
+    <iframe width="377" height="667" src="https://xd.adobe.com/embed/7f4fe7ab-6679-4d5a-a249-05f3d4ed1b70?hints=off" frameborder="0" allowfullscreen></iframe>
 
     <!--
     <div>
