Storyboard and featureset added

--- a/index.html
+++ b/index.html
@@ -185,6 +185,103 @@
 
     </section>
 
+    <section id="storyboard" class="bg_sec">
+        <img src="img/storyboard.png">
+    </section>
+
+    <section id="feature" class="bg_pri">
+
+        <h2>Feature sets</h2>
+
+        <h3>Booke lokale</h3>
+        <ul>
+            <li>Vælg antal deltagere</li>
+            <li>Visning af kalender med ledige og optagede tider</li>
+            <li>Klik på dato</li>
+            <li>Valg af lokale</li>
+            <li>Vælg ledigt tidsrum</li>
+            <li>Indtast antal timer</li>
+        </ul>
+        <h3>Booke værksted</h3>
+        <ul>
+            <li>Visning af kalender med ledige og optagede tider</li>
+            <li>Klik på dato</li>
+            <li>Vælg ledigt tidsrum</li>
+            <li>Indtast antal timer</li>
+        </ul>
+        <h3>Bestille frokost</h3>
+        <ul>
+            <li>Se menu</li>
+            <ul class="list_right">
+                <li>Vælg uge?</li>
+            </ul>
+            <li>Bestil 10-turs-klippekort</li>
+            <ul class="list_right">
+                <li>Betal for klippekort</li>
+                <li>Betal med “husk kort”</li>
+            </ul>
+            <li>Bestil frokost</li>
+            <ul class="list_right">
+                <li>Vælg dag?</li>
+                <li>Betal med “husk kort”</li>
+            </ul>
+        </ul>
+        <h3>Tjekke info på andre</h3>
+        <ul>
+            <li>Se kompetence</li>
+            <li>Se navne</li>
+            <li>Se billeder</li>
+            <li>Se kontaktinfo</li>
+            <li>Klikke på kontaktinfo</li>
+            <li>Se medlemskab</li>
+        </ul>
+
+        <h3>Indberette fejl og mangler </h3>
+        <ul>
+            <li>Hvad er problemet</li>
+            <li>Hvor</li>
+            <li>Dato</li>
+        </ul>
+
+        <h3>Fordele</h3>
+        <ul>
+            <li>Opret fordel?</li>
+            <li>Fordele katalog</li>
+            <li>Søg kategori?</li>
+        </ul>
+
+        <h3>Min profil</h3>
+        <ul>
+            <li>Redigér profil
+                <ul>
+                    <li>Billede</li>
+                    <li>Navn</li>
+                    <li>Virksomhed</li>
+                    <li>Kompetencer</li>
+                </ul>
+                <li>Medlemsskab</li>
+                <ul>
+                    <li>Ændre medlemsskab</li>
+                </ul>
+                <li>Mine Klippekort</li>
+                <li>Gemte betalingskort</li>
+                <ul>
+                    <li>Tilføj nyt betalingskort</li>
+                    <li>Slet betalingskort</li>
+                </ul>
+                <li>Indstillinger</li>
+                <li>Log ud</li>
+        </ul>
+        <h3>Events/kurser</h3>
+        <ul>
+            <li>Se events / kurser</li>
+            <li>Køb billet / book plads</li>
+        </ul>
+
+
+    </section>
+
+
     <section id="data" class="bg_sec">
 
         <h2>Test af paper-prototype</h2>
