XD-prototype på dokumentationssite, afleveringssite mappe tilføjet, tidligere afleveringssite slet

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Dokumentationssite</h1>
         <p>Gruppe 19</p>
 
-        <a href="praesentation.html" target="_blank">Afleveringssite</a>
+        <a href="afleveringssite/index.html" target="_blank">Afleveringssite</a>
         <a href="pitch/index.html" target="_blank">Præsentationssite</a>
     </section>
 
@@ -395,8 +395,12 @@
         <h2>Test af XD-prototype</h2>
 
         <div class="center">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/M2YOe92xLf4" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/M2YOe92xLf4" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen class="test"></iframe>
         </div>
+
+        <h2>XD-prototype</h2>
+
+        <iframe width="377" height="667" src="https://xd.adobe.com/embed/7f4fe7ab-6679-4d5a-a249-05f3d4ed1b70?hints=off" frameborder="0" allowfullscreen></iframe>
     </section>
 
     <section id="gruppe" class="bg_pri">
