--- a/afleveringssite/index.html
+++ b/afleveringssite/index.html
@@ -42,7 +42,7 @@
             <div>Dokumentationssite</div>
         </a>
 
-        <a href="pitch/index.html" target="_blank">
+        <a href="/pitch/index.html" target="_blank">
             <div>Pitch materiale</div>
         </a>
     </div>
